--- a/template/home.html
+++ b/template/home.html
@@ -101,13 +101,18 @@
       padding: 4%;
       margin: 3%;
       font-size: 1rem;
+      border-radius: 20px;
       font-family: 'Dancing Script', cursive;
     }
 
+    .item a{
+    color: white;
+    }
+
     .item:hover {
-      background-color: white;
+      background-color: rgb(28, 91, 228);
       color: black;
-      border-radius: 20px;
+      border-radius: 20px;  
     }
 
 
@@ -117,7 +122,7 @@
     }
 
     .active {
-      background-color: white;
+      background-color: rgb(28, 91, 228);;
       border-radius: 20px;
     }
 
@@ -278,7 +283,7 @@
         font-size: 0.7rem;
       }
       #logo {
-        font-size: 1.8rem;
+        font-size: 1.5rem;
       }
     }
     @media screen and (max-width: 400px) {
@@ -290,7 +295,7 @@
       }
       .right h1 {
         margin: 10px 0px ;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
       }
       .btnn {
         top: 50%;
@@ -299,7 +304,7 @@
         font-size: 0.7rem;
       }
       #logo {
-        font-size: 1.8rem;
+        font-size: 1rem;
       }
     }
   </style>
