--- a/template/footer1.html
+++ b/template/footer1.html
@@ -18,8 +18,10 @@
       <div class="form">
             <form action="{% url 'footer1' %}" class="submition" method="POST">
             {% csrf_token %}
-            <input type="text" class="form-control" id="enqtxt" name="user_mail" placeholder="Email_Id" required>
-            <input type="text" class="form-control" id="enqtxt" name="user_message" placeholder="Message" required> 
+            <input type="text" class="form-control" id="enqtxt" name="user_mail" placeholder="Enter Below Email_ID" required>
+            <div id="adminenq" class="form-text">farheenriyazi14@gmail.com </div>
+            <input type="text" class="form-control" id="enqtxt" name="user_name" placeholder="Your Name" required>
+            <input type="text" class="form-control" id="enqtxt" name="user_message" placeholder="Your Message" required> 
             <button type="submit" class="enq"  onclick="confirmation()">Submit </button>
             </form>
         </div>
@@ -57,7 +59,13 @@
    font-family: 'Times New Roman', Times, serif;
    margin: 1%;
    border: 2px solid rgb(53, 52, 52);
-
+  }
+  #adminenq{
+    background-color: transparent;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 0.2rem;
+    margin: 1%
   }
  .enq{
   background-color: transparent;
@@ -129,6 +137,13 @@
           @media screen and (max-width: 910px) {
             #enqtxt{
               font-size: 0.8rem;
+              color: white;
+            }
+            #adminenq{
+              font-size: 0.8rem;
+              color: white;
+              letter-spacing: 0.2rem;
+
             }
             .enq{
             margin-top: 2%;
@@ -160,6 +175,13 @@
         @media screen and (max-width: 750px) {
           #enqtxt{
             font-size: 0.8rem;
+            color: white;
+          }
+          #adminenq{
+            font-size: 0.8rem;
+            color: white;
+            letter-spacing: 0.1rem;
+
           }
           .enq{
           margin-top: 2%;
@@ -192,6 +214,12 @@
         @media screen and (max-width: 550px) {
           #enqtxt{
             font-size: 0.7rem;
+            color: white;
+          }
+          #adminenq{
+            font-size: 0.7rem;
+            letter-spacing: 0rem;
+            color: white;
           }
           .enq{
           margin-top: 2%;
@@ -225,6 +253,12 @@
           #enqtxt{
             font-size: 0.7rem;
             padding: 0.7%;
+            color: white;
+          }
+          #adminenq{
+            font-size: 0.7rem;
+            letter-spacing: 0rem;
+            color: white;
           }
           .enq{
           margin-top: 2%;
